--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
   </p>
 
   <a class="bookmarklet" href="javascript:(function(){var s=document.createElement('script');s.src='https://gaurangpb.github.io/testid-inspector/datatestid.min.js';document.body.appendChild(s);})();">
-    🔍 TestID Inspector
+    TestID Inspector
   </a>
 
   <h2>📦 How to Use</h2>
